[gd_scene load_steps=9 format=3 uid="uid://cf05v47pivgqc"]

[ext_resource type="Script" path="res://Scripts/Window/key_lock.gd" id="1_226ql"]
[ext_resource type="Theme" uid="uid://danre0tbddxgh" path="res://Sprites/global_theme.tres" id="2_05sl6"]
[ext_resource type="Texture2D" uid="uid://bw4q0a1v3tt85" path="res://Sprites/Rectangular_Window.png" id="3_vcrjy"]
[ext_resource type="Texture2D" uid="uid://b14xt22mwytxw" path="res://Sprites/arrow.png" id="4_bmfjp"]
[ext_resource type="Texture2D" uid="uid://bmiwf3duovxi3" path="res://Sprites/Rect_Bar.png" id="5_ivsy4"]
[ext_resource type="Texture2D" uid="uid://hyxvwhk3vtw7" path="res://Sprites/small_grey_square.png" id="6_8nn1f"]
[ext_resource type="SpriteFrames" uid="uid://bq4qxl53eom0y" path="res://Sprites/damage_animation.tres" id="7_gem1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7l8y"]
size = Vector2(116, 89.75)

[node name="KeyLock" type="Node2D"]
script = ExtResource("1_226ql")

[node name="Back" type="NinePatchRect" parent="."]
offset_left = -26.0
offset_top = -6.0
offset_right = 92.0
offset_bottom = 95.0
theme = ExtResource("2_05sl6")
texture = ExtResource("3_vcrjy")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 32
patch_margin_bottom = 10

[node name="Number1" type="Control" parent="Back"]
anchors_preset = 0
offset_left = -0.5
offset_right = -0.5

[node name="Up_Arrow" type="TextureButton" parent="Back/Number1"]
layout_mode = 0
offset_left = 23.0
offset_top = 25.0
offset_right = 123.0
offset_bottom = 125.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Down_Arrow" type="TextureButton" parent="Back/Number1"]
offset_left = 13.0
offset_top = 67.0
offset_right = 113.0
offset_bottom = 167.0
rotation = -1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Num" type="Label" parent="Back/Number1"]
layout_mode = 0
offset_left = 13.0
offset_top = 35.0
offset_right = 24.0
offset_bottom = 57.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Number2" type="Control" parent="Back"]
layout_mode = 3
anchors_preset = 0
offset_left = 27.0
offset_right = 27.0

[node name="Up_Arrow" type="TextureButton" parent="Back/Number2"]
layout_mode = 0
offset_left = 23.0
offset_top = 25.0
offset_right = 123.0
offset_bottom = 125.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Down_Arrow" type="TextureButton" parent="Back/Number2"]
offset_left = 13.0
offset_top = 67.0
offset_right = 113.0
offset_bottom = 167.0
rotation = -1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Num" type="Label" parent="Back/Number2"]
layout_mode = 0
offset_left = 13.0
offset_top = 35.0
offset_right = 24.0
offset_bottom = 57.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Number3" type="Control" parent="Back"]
layout_mode = 3
anchors_preset = 0
offset_left = 54.5
offset_right = 54.5

[node name="Up_Arrow" type="TextureButton" parent="Back/Number3"]
layout_mode = 0
offset_left = 23.0
offset_top = 25.0
offset_right = 123.0
offset_bottom = 125.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Down_Arrow" type="TextureButton" parent="Back/Number3"]
offset_left = 13.0
offset_top = 67.0
offset_right = 113.0
offset_bottom = 167.0
rotation = -1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Num" type="Label" parent="Back/Number3"]
layout_mode = 0
offset_left = 13.0
offset_top = 35.0
offset_right = 24.0
offset_bottom = 57.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Number4" type="Control" parent="Back"]
layout_mode = 3
anchors_preset = 0
offset_left = 82.0
offset_right = 82.0

[node name="Up_Arrow" type="TextureButton" parent="Back/Number4"]
layout_mode = 0
offset_left = 23.0
offset_top = 25.0
offset_right = 123.0
offset_bottom = 125.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Down_Arrow" type="TextureButton" parent="Back/Number4"]
offset_left = 13.0
offset_top = 67.0
offset_right = 113.0
offset_bottom = 167.0
rotation = -1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("4_bmfjp")
texture_pressed = ExtResource("4_bmfjp")
texture_hover = ExtResource("4_bmfjp")
texture_disabled = ExtResource("4_bmfjp")
texture_focused = ExtResource("4_bmfjp")

[node name="Num" type="Label" parent="Back/Number4"]
layout_mode = 0
offset_left = 13.0
offset_top = 35.0
offset_right = 24.0
offset_bottom = 57.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enter_Code" type="Button" parent="Back"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 90.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "ENTER"

[node name="Uibar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -27.0
offset_top = -7.0
offset_right = 92.0
offset_bottom = 4.0

[node name="Draggable_Bar" type="NinePatchRect" parent="Uibar"]
layout_mode = 0
offset_left = 1.0
offset_right = 119.0
offset_bottom = 11.0
texture = ExtResource("5_ivsy4")
patch_margin_left = 10
patch_margin_right = 40

[node name="Minimize" type="TextureButton" parent="Uibar"]
layout_mode = 0
offset_left = 88.0
offset_right = 98.0
offset_bottom = 10.0
texture_normal = ExtResource("6_8nn1f")
texture_pressed = ExtResource("6_8nn1f")
texture_hover = ExtResource("6_8nn1f")
texture_disabled = ExtResource("6_8nn1f")
texture_focused = ExtResource("6_8nn1f")

[node name="Delete" type="TextureButton" parent="Uibar"]
layout_mode = 0
offset_left = 108.0
offset_right = 118.0
offset_bottom = 10.0
texture_normal = ExtResource("6_8nn1f")
texture_pressed = ExtResource("6_8nn1f")
texture_hover = ExtResource("6_8nn1f")
texture_disabled = ExtResource("6_8nn1f")
texture_focused = ExtResource("6_8nn1f")

[node name="Maximize" type="TextureButton" parent="Uibar"]
layout_mode = 0
offset_left = 98.0
offset_right = 108.0
offset_bottom = 10.0
texture_normal = ExtResource("6_8nn1f")
texture_pressed = ExtResource("6_8nn1f")
texture_hover = ExtResource("6_8nn1f")
texture_disabled = ExtResource("6_8nn1f")
texture_focused = ExtResource("6_8nn1f")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(33, 48)
shape = SubResource("RectangleShape2D_a7l8y")

[node name="Damage" type="AnimatedSprite2D" parent="."]
position = Vector2(33, 48)
scale = Vector2(1.1675, 0.89)
sprite_frames = ExtResource("7_gem1r")

[connection signal="pressed" from="Back/Number1/Up_Arrow" to="." method="_on_up_arrow_pressed1"]
[connection signal="pressed" from="Back/Number1/Down_Arrow" to="." method="_on_down_arrow_pressed1"]
[connection signal="pressed" from="Back/Number2/Up_Arrow" to="." method="_on_up_arrow_pressed2"]
[connection signal="pressed" from="Back/Number2/Down_Arrow" to="." method="_on_down_arrow_pressed2"]
[connection signal="pressed" from="Back/Number3/Up_Arrow" to="." method="_on_up_arrow_pressed3"]
[connection signal="pressed" from="Back/Number3/Down_Arrow" to="." method="_on_down_arrow_pressed3"]
[connection signal="pressed" from="Back/Number4/Up_Arrow" to="." method="_on_up_arrow_pressed4"]
[connection signal="pressed" from="Back/Number4/Down_Arrow" to="." method="_on_down_arrow_pressed4"]
[connection signal="pressed" from="Back/Enter_Code" to="." method="_on_enter_code_pressed"]
